<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <modules>
        <module>order-service</module>
        <module>common</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.8</version>
        <relativePath/>
    </parent>
    <groupId>com.brilliantminds</groupId>
    <artifactId>food-ordering</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>food-ordering</name>
    <description>Food Ordering Service</description>
    <packaging>pom</packaging>
    <properties>
        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
    </properties>
    <dependencyManagement>
<dependencies>
    <dependency>
        <groupId>com.brilliantminds</groupId>
        <artifactId>domain-core</artifactId>
        <version>${project.version}</version>
    </dependency>
    <dependency>
        <groupId>com.brilliantminds</groupId>
        <artifactId>domain-service</artifactId>
        <version>${project.version}</version>
    </dependency>
    <dependency>
        <groupId>com.brilliantminds</groupId>
        <artifactId>order-api</artifactId>
        <version>${project.version}</version>
    </dependency>
    <dependency>
        <groupId>com.brilliantminds</groupId>
        <artifactId>order-dao</artifactId>
        <version>${project.version}</version>
    </dependency>
    <dependency>
        <groupId>com.brilliantminds</groupId>
        <artifactId>order-messaging</artifactId>
        <version>${project.version}</version>
    </dependency>
    <dependency>
        <groupId>com.brilliantminds</groupId>
        <artifactId>commons-domain</artifactId>
        <version>${project.version}</version>
    </dependency>
    <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>1.18.22</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-logging</artifactId>
    </dependency>
    <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
    </dependency>
</dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
